--- a/style.css
+++ b/style.css
@@ -6,3 +6,33 @@
     border: 2px dashed purple;
     background-color: blue;
 }
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 950px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+
+
+
+.section{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+*{
+    box-sizing: border-box;
+}
+a{
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+}
+h1,h2,h3,h4,p,img,ul,li{
+    margin: 0;
+    padding: 0;
+}
