--- a/style.css
+++ b/style.css
@@ -1,24 +1,3 @@
-.custom-element{
-    width: 350px;
-    height: 220px;
-    padding: 15px 10px 20px 10px;
-    margin-bottom: 30px;
-    border: 2px dashed purple;
-    background-color: blue;
-}
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    width: 950px;
-    padding: 0 15px;
-    margin: 0 auto;
-}
-
-
-
-
 .section{
     margin-top: 20px;
     margin-bottom: 20px;
@@ -35,4 +14,70 @@ ul{
 h1,h2,h3,h4,p,img,ul,li{
     margin: 0;
     padding: 0;
+}
+
+.flex-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: auto;
+    background-color: brown;
+}
+
+.holder {
+    display: grid;
+    grid-template-areas: 
+        "one five"
+        "three two four";
+    grid-gap: 10px;
+    width: 300px;
+    height: 200px;
+}
+
+.item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    color: white;
+    font-weight: bold;
+}
+
+.item1 { background-color: orange; grid-area: one; }
+.item2 { background-color: blue; grid-area: two; }
+.item3 { background-color: purple; grid-area: three; }
+.item4 { background-color: green; grid-area: four; }
+.item5 { background-color: yellow; grid-area: five; }
+
+.bg-box{
+    width: 600px;
+    height: 400px;
+    background-image: url(​https://www.freeiconspng.com/uploads/lamp-png-0.png), url(https://img2.goodfon.ru/wallpaper/big/0/5b/pole-zelen-trava-dom-derevya.jpg),   url(https://www.freeiconspng.com/uploads/grass-png-images-pictures-transparent-28.png)    ;  
+background-position: top center,center center;
+background-repeat:repeat-x ,no-repeat;
+background-size: contain, cover;
+border: 10px green;
+}
+.Web{
+    color: rgb(99, 199, 232);
+}
+.Studio{
+    color: black;
+}
+.hero{
+    background-color: blueviolet;
+background-image: url(./img/ііі.jpg);
+background-position: center;
+background-repeat: no-repeat;
+}
+.btn2{
+    margin-top: 300px;
+    margin-bottom: 270px;
+height: 30px;
+width: 120px;
+display: block;
+margin: auto;
+}
+.container2{
+    
 }
