--- a/MainSite/style.css
+++ b/MainSite/style.css
@@ -198,3 +198,24 @@ li {
 .Studio2 {
   color: white;
 }
+.nav ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+.nav a {
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  position: relative;
+}
+.nav a.active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 3px;
+  background-color: blue;
+  display: block;
+}
